# MLIRToyCompiler

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/Mat/: CMakeLists.txt  MatDialect.h  MatDialect.td  MatOps.h  MatOps.td  Passes.h
include/MatOps/: CMakeLists.txt  MatOps.h  MatOps.td  MatOpsDialect.h  MatOpsDialect.td
lib/: CMakeLists.txt
lib/Mat/: CMakeLists.txt  LowerToAffinePass.cpp  LowerToLLVMPass.cpp  MatDialect.cpp  MatOps.cpp  TilingPass.cpp
lib/MatOps/: CMakeLists.txt  MatOps.cpp  MatOpsDialect.cpp
test/Mat/: MatArithmetic.mlir
tools/: CMakeLists.txt
tools/mini-opt/: CMakeLists.txt  mini-opt.cpp
